--- a/index.html
+++ b/index.html
@@ -18,36 +18,34 @@
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
-      padding: 16px;
+      padding: 20px;
       background-color: #f0f2f5;
     }
 
     .container {
-      max-width: 100%;
-      width: 100%;
-      margin: 0 auto;
+      max-width: 480px;
+      margin: auto;
       background: white;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     h2 {
       text-align: center;
-      font-size: 1.4em;
       margin-bottom: 20px;
     }
 
     label {
       display: block;
-      margin: 14px 0 6px;
+      margin: 12px 0 5px;
       font-weight: bold;
     }
 
     input {
       width: 100%;
-      padding: 12px;
-      font-size: 16px;
+      padding: 10px;
+      font-size: 15px;
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
@@ -72,7 +70,7 @@
 
     .result {
       margin-top: 20px;
-      font-size: 1.3em;
+      font-size: 1.4em;
       text-align: center;
       color: #333;
     }
@@ -89,25 +87,13 @@
       display: none;
     }
 
-    @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
-      .container {
-        padding: 16px;
-        border-radius: 10px;
-        box-shadow: none;
-      }
+    @media (max-width: 480px) {
       input {
-        padding: 10px;
-        font-size: 15px;
-      }
-      button {
-        padding: 12px;
-        font-size: 15px;
+        padding: 8px;
+        font-size: 14px;
       }
     }
-</style>
+  </style>
 </head>
 <body>
   <div class="container">
