--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/png" href="icon-192.png" />
   <meta name="theme-color" content="#007bff" />
-  <style>
+  <style>html, body {
+      overflow-x: hidden;
+    }
+
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
@@ -23,12 +26,13 @@
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
 
     h2 {
       text-align: center;
       font-size: 1.4em;
-      margin-bottom: 20px;
+      margin: 0 0 20px;
     }
 
     label {
@@ -44,6 +48,7 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
+      max-width: 100%;
     }
 
     button {
@@ -57,6 +62,8 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      box-sizing: border-box;
+      max-width: 100%;
     }
 
     button:hover {
@@ -99,8 +106,7 @@
         padding: 12px;
         font-size: 15px;
       }
-    }
-</style>
+    }</style>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
